# newsmgrbot

./: .containerignore  .gitignore  Containerfile  README.rst  pyproject.toml
alembic/: env.py
alembic/versions/: 6885a9e41ea9_.py
dbschema/: default.esdl
dbschema/migrations/: 00001-m12jjvv.edgeql  00001-m13l34b.edgeql
src/newsmgrbot/: __main__.py  app.py  auth.py  cli.py  config.py  context.py  di.py  ioc.py  models.py  provider.py  utils.py
src/newsmgrbot/adapters/: feed_scraper.py  news_repo.py  source_repo.py  user_repo.py
src/newsmgrbot/callbacks/: auth.py  help.py  newsletter.py  parser.py  privacy.py  sources.py  start.py
src/newsmgrbot/controllers/: privacy.py
src/newsmgrbot/controllers/telegram_bot/: help.py  newsource.py  start.py
src/newsmgrbot/handlers/: __init__.py  _help.py  _privacy.py  _start.py
src/newsmgrbot/models/: __init__.py  _news.py  _source.py  _user.py  news.py  news_id.py  source.py  source_id.py  telegram_id.py  user.py  user_source.py
src/newsmgrbot/ports/: news_repo.py  source_repo.py  user_repo.py
src/newsmgrbot/services/: feed_scraper.py  news.py  news_repo.py  source.py  source_repo.py  user.py  user_repo.py
