[project]
name = "newsmgrbot"
version = "0.1.0"
authors = [
    {name = "Mikhail Samylov", email = "134856751+samylovma@users.noreply.github.com"},
]
dependencies = [
    # frameworks
    "python-telegram-bot[job-queue,rate-limiter,webhooks]~=21.4",
    "dishka~=1.3",
    # database
    "sqlalchemy[asyncio]~=2.0",
    "advanced-alchemy~=0.19",
    "alembic~=1.13",
    "asyncpg~=0.29",
    # other
    "httpx~=0.27",
    "xmltodict~=0.13",
    "click~=8.1",
]
requires-python = "~=3.12"
readme = "README.rst"

[project.scripts]
newsmgrbot = "newsmgrbot.cli:cli"

[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
    "types-xmltodict",
]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D213",
    "COM812",
    "ISC001",
    "D1",
    "TRY003",
    "EM101",
]

[tool.mypy]
python_version = "3.12"
platform = "linux"
strict = true
