[project]
name = "newsmgrbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "dishka>=1.4.1",
    "edgedb>=2.2.0",
    "python-telegram-bot[rate-limiter,webhooks]>=21.7",
    "xmltodict>=0.14.2",
]

[project.scripts]
newsmgrbot = "newsmgrbot.cli:cli"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.4",
    "types-xmltodict>=0.14.0.20241009",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "COM812",
    "ISC001",
    "TRY003",
    "EM101",
    "EM102",
]

[tool.mypy]
python_version = "3.12"
platform = "linux"
strict = true
